fix: mini logo on firefox

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -49,8 +49,8 @@ header {
 		position: absolute;
 		left: 1rem;
 		background: transparent url('/images/bosonic_logo_small.png') no-repeat;
-		width: 325px;
-		height: 159px;
+		width: 140px;
+		height: 45px;
 		text-align: left;
 		text-indent: -9000px;
 		display: none;
